BUNCH OF STUFF save work

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MYSQL_DATABASE=wb_db
-MYSQL_ROOT_PASSWORD=sdf
+MYSQL_DATABASE=wp_database
+MYSQL_ROOT_PASSWORD=somepswd
 MYSQL_USERNAME=nsassenb
 MYSQL_PASSWORD=test1234
+NETWORK_NAME=inception_wp-net
