--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -1,12 +1,14 @@
 FROM debian:latest
 
-RUN apt-get update && apt-get upgrade && apt-get install -y wget tar php-fpm systemctl
+RUN apt-get update && apt-get upgrade && apt-get install -y wget tar php-fpm systemctl php-mysql
 
 COPY ./www.conf /etc/php/8.2/fpm/pool.d/www.conf
 
 WORKDIR /var/www/html
 
 RUN wget https://wordpress.org/latest.tar.gz && tar -xzvf latest.tar.gz && rm latest.tar.gz
+
+COPY ./wp-config.php /var/www/html/wordpress/wp-config.php
 
 EXPOSE 9000
 
