PUSH CURRENT WORK. wp-config.php inserted using startup script, same with maradb will create database and user every time using the .env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,4 +34,14 @@ networks:
   wp-net:
 volumes:
   web-vol:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/niko/data/web-vol
   db-data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/niko/data/db-data
