--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -1,15 +1,13 @@
 FROM debian:latest
 
-RUN apt-get update && apt-get upgrade && apt-get install -y systemctl mariadb-server mariadb-client
-
-COPY ./setup.sh /docker-entrypoint-initdb.d/setup.sh
+RUN apt-get update && apt-get upgrade && apt-get install -y systemctl mariadb-server
+COPY ./setup.sh /setup.sh
 COPY ./my.cnf /etc/mysql/my.cnf
 COPY ./50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
-RUN chmod +x /docker-entrypoint-initdb.d/setup.sh
+RUN chmod +x /setup.sh
 
 EXPOSE 3306
 
-USER mysql
-
-CMD ["mysqld_safe"]
+CMD ["bash", "/setup.sh"]
+# CMD [ "mysqld_safe" ]
