FIX: remove ufw wich was used for debugging

--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:latest
 
-RUN apt-get update && apt-get upgrade && apt-get install -y systemctl mariadb-server ufw
+RUN apt-get update && apt-get upgrade && apt-get install -y systemctl mariadb-server
 COPY ./tools/check.sh /tools/check.sh
 COPY ./conf/my.cnf /etc/mysql/my.cnf
 COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
