--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:11
 
 RUN apt-get update && apt-get upgrade && apt-get install -y wget tar php-fpm systemctl php-mysql
 
-COPY ./conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
+COPY ./conf/php.conf /etc/php/7.4/fpm/pool.d/www.conf
 
 WORKDIR /var/www/html
 
