--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -53,9 +53,11 @@ services:
       - web-vol:/home/ftpsecure/
     env_file:
       - .env
-  adminer:
-    build: requirements/bonus/adminer
-    container_name: adminer
+  redis:
+    build: requirements/bonus/redis
+    container_name: redis
+    ports:
+      - "6379:6379"
     networks:
       - inception-net
 networks:
