--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:11
 
-RUN apt-get update && apt-get upgrade && apt-get install -y systemctl nginx openssl
+RUN apt-get update && apt-get upgrade && apt-get install -y nginx openssl
 
 COPY ./conf/default /etc/nginx/sites-available/default
 
@@ -8,4 +8,4 @@ WORKDIR /etc/nginx/ssl
 
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout nginx.key -out nginx.crt -subj "/C=AT/ST=VIENNA/L=VIENNA/O=42/CN=nsassenb.42.fr"
 
-CMD ["systemctl", "start", "nginx.service"]
+CMD ["nginx", "-g", "daemon off;"]
