--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:11
 
-RUN apt-get update && apt-get upgrade && apt-get install -y curl php php-mysql
+RUN apt-get update -y -y && apt-get upgrade -y -y && apt-get install -y curl php php-mysql
 RUN mkdir -p /run/php/
 
 RUN mkdir -p /var/www/html/adminer && curl -L https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1.php -o /var/www/html/adminer/index.php
