--- a/srcs/requirements/bonus/static-site/Dockerfile
+++ b/srcs/requirements/bonus/static-site/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:11
 
-RUN apt-get update && apt-get upgrade && apt-get install -y nginx 
+RUN apt-get update -y && apt-get upgrade -y && apt-get install -y nginx 
 
 COPY ./conf/nginx.conf /etc/nginx/sites-available/default
 
