--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:11
 
-RUN apt-get update && apt-get upgrade && apt-get install -y systemctl mariadb-server
+RUN apt-get update -y && apt-get upgrade -y && apt-get install -y systemctl mariadb-server
 COPY ./tools/check.sh /tools/check.sh
 COPY ./conf/my.cnf /etc/mysql/my.cnf
 COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
