FIX: ftp server upload

--- a/srcs/requirements/bonus/static-site/conf/nginx.conf
+++ b/srcs/requirements/bonus/static-site/conf/nginx.conf
@@ -4,5 +4,13 @@ server {
 
   index index.html;
 
-  server_name _ static.nsassenb.42.fr;
+  server_name static.nsassenb.42.fr;
+
+  location / {
+    try_files $uri $uri/ =404;
+  }
+
+  location /owa {
+    proxy_pass http://owa:8080/;
+  }
 }
