--- a/srcs/requirements/bonus/vsftpd/Dockerfile
+++ b/srcs/requirements/bonus/vsftpd/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update -y && apt-get upgrade -y && apt-get install -y systemctl vsft
 COPY ./conf/ftp.conf /etc/vsftpd.conf
 COPY ./tools/setup.sh /tools/setup.sh
 
-EXPOSE 20-21
+EXPOSE 21
 EXPOSE 10000-10100
 
 CMD ["bash", "/tools/setup.sh"]
