--- a/srcs/requirements/bonus/vsftpd/conf/ftp.conf
+++ b/srcs/requirements/bonus/vsftpd/conf/ftp.conf
@@ -28,7 +28,7 @@ anonymous_enable=NO
 local_enable=YES
 #
 # Uncomment this to enable any form of FTP write command.
-#write_enable=YES
+write_enable=YES
 #
 # Default umask for local users is 077. You may wish to change this to 022,
 # if your users expect that (022 is used by most other ftpd's)
@@ -100,7 +100,7 @@ connect_from_port_20=YES
 #ascii_download_enable=YES
 #
 # You may fully customise the login banner string:
-ftpd_banner=Welcome to blah FTP service.
+ftpd_banner=Welcome to cool FTP service.
 #
 # You may specify a file of disallowed anonymous e-mail addresses. Apparently
 # useful for combatting certain DoS attacks.
