--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     networks:
       - inception-net
     volumes:
-      - web-vol:/home/ftpsecure/
+      - web-vol:/home/ftpsecure/data
     env_file:
       - .env
     restart: always
